tests/fixtures/errors/non_literal_exponent.ksr
param x: Length = 1.0 m;
param n: Dimensionless = 2.0;
node bad: Area = @x ^ @n;
